[gd_scene load_steps=2 format=2]

[ext_resource path="res://ExampleReportForm.gd" type="Script" id=2]

[node name="main" type="Node2D"]

[node name="ExampleReportForm" type="Panel" parent="."]
margin_left = 124.0
margin_top = 147.0
margin_right = 485.0
margin_bottom = 434.0
script = ExtResource( 2 )
report_token = "rt_sMSsWAEy1kSjQ1Xi7kBArmHo"

[node name="MarginContainer" type="MarginContainer" parent="ExampleReportForm"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="ExampleReportForm/MarginContainer"]
margin_right = 353.0
margin_bottom = 280.0

[node name="MessageLabel" type="Label" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_right = 353.0
margin_bottom = 14.0
text = "Message:"

[node name="MessageEdit" type="TextEdit" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 353.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 150 )
text = "with file attachments v9"

[node name="EMailLabel" type="Label" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 353.0
margin_bottom = 186.0
text = "E-Mail (optional)"

[node name="EMailEdit" type="LineEdit" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 353.0
margin_bottom = 214.0

[node name="SeverityLabel" type="Label" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 353.0
margin_bottom = 232.0
text = "Severity:"

[node name="SeveritySelect" type="OptionButton" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 353.0
margin_bottom = 256.0
text = "Severity"

[node name="SendReportButton" type="Button" parent="ExampleReportForm/MarginContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 353.0
margin_bottom = 280.0
text = "Send User Report"

[connection signal="pressed" from="ExampleReportForm/MarginContainer/VBoxContainer/SendReportButton" to="ExampleReportForm" method="_on_SendReportButton_pressed"]
